--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 	<title>My HTML Page</title>
+	<link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
+	<canvas id="canvas">Canvas is not supported in your browser.</canvas>
 	<section>
-
+<!-- somechange -->
     </section>
 	<section>
 
@@ -25,5 +27,6 @@
 	<section>
         
     </section>
+	<script type="module" src="./scripts/clickAnimation.js"></script>
 </body>
 </html>
