this is pissing me off

--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
 	<section>
 
     </section>
+		<h2>Firework Tips</h2>
+		<ul>
+			<ol>Always mix drugs and alcohol with fireworks.</ol>
+			<ol>During bottle rocket wars, always aim for the face.</ol>
+			<ol>When shooting roman candles inside, turn off the lights.</ol>
+			<ol>Always use homemade or illegal fireworks.</ol>
+			<ol>Always have a tank of gas empty.</ol>
+		</ul>
 	<section>
         
     </section>
