More annoying stuff

--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
 	<title>My HTML Page</title>
 	<link rel="stylesheet" href="./styles/main.css">
 </head>
+
+
+
 <body>
-	<canvas id="canvas">Canvas is not supported in your browser.</canvas>
+	<main>
+		<article class="annoyingPic">
+			<h1 class="someRandomWords">VERY EARLY 4TH JULY BAD SITE THING</h1>
+		</article>
+
 	<section>
-<!-- somechange -->
+SO METHing
     </section>
 	<section>
 
@@ -27,6 +34,9 @@
 	<section>
         
     </section>
-	<script type="module" src="./scripts/clickAnimation.js"></script>
+
+</main>
+<canvas id="canvas"></canvas>
+<script type="module" src="./scripts/clickAnimation.js"></script>
 </body>
 </html>
