--- a/index.html
+++ b/index.html
@@ -1,24 +1,9 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
-<html lang="en">
-<head>
-    
-</head>
-<body>
-    <h1>The Fourth of July: A History</h1>
-    <section>
-        <img src="https://www.americanheritage.com/sites/default/files/inline-images/4th-of-July-1819-Philadelphia-John-Lewis-Krimmel.jpg" alt="Continental Congress" style="width:650px;height:400px;">
-    </section>
-</body>
-</html>
-=======
 <html>
 <head>
-	<title>My HTML Page</title>
+	<title>Bad Early July Site</title>
 	<link rel="stylesheet" href="./styles/main.css">
 </head>
-
-
 
 <body>
 	<main>
@@ -61,4 +46,3 @@ SO METHing
 <script type="module" src="./scripts/clickAnimation.js"></script>
 </body>
 </html>
->>>>>>> main
