--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 			<h1 class="someRandomWords">VERY EARLY 4TH JULY BAD SITE THING</h1>
 		</article>
 
+<h1>The Fourth of July: A History</h1>
+<section>
+	<img src="https://www.americanheritage.com/sites/default/files/inline-images/4th-of-July-1819-Philadelphia-John-Lewis-Krimmel.jpg"
+		alt="Continental Congress" style="width:650px;height:400px;">
+</section>
+
 	<section>
 SO METHing
     </section>
