--- a/index.html
+++ b/index.html
@@ -1,23 +1,13 @@
-<!DOCTYPE html>
-<<<<<<< HEAD
-<html lang="en">
-<head>
-    
-</head>
-<body>
-    <h1>The Fourth of July: A History</h1>
-    <section>
-        <img src="https://www.americanheritage.com/sites/default/files/inline-images/4th-of-July-1819-Philadelphia-John-Lewis-Krimmel.jpg" alt="Continental Congress" style="width:650px;height:400px;">
-    </section>
-</body>
-</html>
-=======
 <html>
 <head>
 	<title>My HTML Page</title>
 	<link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
+    <h1 class="flag">The Fourth of July: A History</h1>
+    <section>
+        <img src="https://www.americanheritage.com/sites/default/files/inline-images/4th-of-July-1819-Philadelphia-John-Lewis-Krimmel.jpg" alt="Continental Congress" style="width:650px;height:400px;">
+    </section>
 	<canvas id="canvas">Canvas is not supported in your browser.</canvas>
 	<section>
 <!-- somechange -->
@@ -43,4 +33,3 @@
 	<script type="module" src="./scripts/clickAnimation.js"></script>
 </body>
 </html>
->>>>>>> main
