--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	<main>
+	<main class="container">
 		<article class="annoyingPic">
 			<h1 class="someRandomWords">VERY EARLY 4TH JULY BAD SITE THING</h1>
 		</article>
@@ -49,6 +49,8 @@ SO METHing
 
 </main>
 <canvas id="canvas"></canvas>
+
+<script type="module" src="./scripts/main.js"></script>
 <script type="module" src="./scripts/clickAnimation.js"></script>
 </body>
 </html>
